--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>MockUp</title>
+  <title>Odiza's Webpage</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="IT LOGO.png">
   <script defer src="js/script.js"></script>
